--- a/package.json
+++ b/package.json
@@ -5,9 +5,13 @@
   "main": "server.js",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "bootstrap": "^4.1.0",
     "cors": "^2.8.4",
     "express": "^4.16.2",
-    "nodemon": "^1.14.11"
+    "nodemon": "^1.14.11",
+    "react": "^16.3.1",
+    "react-dom": "^16.3.1",
+    "reactstrap": "^5.0.0-beta.3"
   },
   "devDependencies": {},
   "scripts": {
